# wasmer

./: Cargo.toml  Makefile
examples/: compiler_cranelift.rs  compiler_llvm.rs  compiler_singlepass.rs  early_exit.rs  engine_cross_compilation.rs  engine_dylib.rs  engine_headless.rs  engine_universal.rs  errors.rs  exports_function.rs  exports_global.rs  exports_memory.rs  features.rs  hello_world.rs  imports_exports.rs  imports_function.rs  imports_function_env.rs  imports_global.rs  instance.rs  memory.rs  metering.rs  platform_ios_headless.rs  table.rs  tunables_limit_memory.rs  wasi.rs  wasi_pipes.rs
lib/api/: Cargo.toml
lib/api/src/: lib.rs
lib/artifact/src/: artifact.rs
lib/c-api/: Cargo.toml
lib/cache/: Cargo.toml
lib/cache/benches/: bench_filesystem_cache.rs
lib/cache/src/: filesystem.rs
lib/cli/: Cargo.toml
lib/cli/src/: store.rs
lib/compiler/: Cargo.toml
lib/compiler-cranelift/src/: address_map.rs  compiler.rs  dwarf.rs  func_environ.rs
lib/compiler-llvm/src/: compiler.rs
lib/compiler-singlepass/src/: address_map.rs  codegen.rs  compiler.rs  emitter_arm64.rs  machine.rs  machine_arm64.rs  machine_x64.rs
lib/compiler/src/: target.rs
lib/engine/: Cargo.toml
lib/engine-dylib/: Cargo.toml
lib/engine-staticlib/src/: artifact.rs  engine.rs
lib/engine-universal/: Cargo.toml
lib/engine/src/: artifact.rs  engine.rs  resolver.rs  tunables.rs
lib/engine/src/trap/: frame_info.rs
lib/types/: Cargo.toml
lib/universal-artifact/: Cargo.toml
lib/vm/: Cargo.toml
scripts/: publish.py
tests/compilers/: config.rs
(+42 files in other folders)
